<resources>
    <string name="app_name">Grabbin Coffee</string>
    <string name="grabbin_coffee">Grabbin\' Coffee!</string>
    <string name="find_time_for_coffee_with_friends">Find Time for Coffee with Friends</string>
    <string name="settings">Settings</string>
    <string name="see_past_rsvps">See Past RSVPs</string>
    <string name="new_event_invite">New Event Invite</string>
    <string name="invitee_email">invitee email</string>
    <string name="event_location">event location</string>
    <string name="event_title">event title</string>
    <string name="send_invite">Send Invite</string>
    <string name="unlink_calendar">Unlink Calendar</string>
    <string name="toggle_dark_mode">toggle dark mode</string>
    <string name="past_rsvps">Past RSVPs</string>
    <string name="postup">postUp</string>
    <string name="post_me">post me</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps_button_name">Loc</string>
    <string name="find_dates">find dates</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="invitee_name">invitee name</string>
    <string name="user_email">User Email</string>
    <string name="your_email">your email</string>
</resources>
